feat: allow custom dialog title on creation
